# hallucination-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FRONTEND_STATUS.md  INTEGRATION_FIXES.md  INTEGRATION_SUMMARY.md  ISSUES_FIXED.md  LAYER_UTILIZATION.md  README.md  TESTING_GUIDE.md  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: _events.json  build-manifest.json  react-loadable-manifest.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json  src_lib_api_ts.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js  benchmarks.js  docs.js  index.js  pipeline.js  results.js  settings.js  verify.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js  recharts.js
frontend/.next/static/chunks/: _error.js  (+2 more)
frontend/src/pages/: _app.tsx  _document.tsx  benchmarks.tsx  docs.tsx  index.tsx  pipeline.tsx  pipeline.tsx.backup  results.tsx  settings.tsx  verify.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: README.md  download_models.py  generate_report.py  run_benchmark.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  audit.py  benchmark.py  health.py
src/config/: __init__.py  constants.py  prompts.py  settings.py
src/layers/: __init__.py  claim_intelligence.py  correction.py  drift.py  ingestion.py  retrieval.py  scoring.py  ui_integration.py  verification.py
src/services/: __init__.py  verification_service.py
src/tests/: __init__.py  conftest.py  test_integration.py  test_layers.py  test_models.py  test_utils.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  annotated_text.py  citation_report.py  claim_card.py  correction_panel.py  explainability_panel.py  sidebar.py  source_viewer.py  trust_meter.py
src/ui/pages/: __init__.py  audit.py  home.py  results.py  settings.py
src/utils/: __init__.py  caching.py  file_handlers.py  logging_config.py  text_processing.py  validation.py
test_data/: sample_llm_output.txt  sample_source.txt
(+61 files in other folders)
